--- a/app/layout/admin.users.html
+++ b/app/layout/admin.users.html
@@ -45,7 +45,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="user in users | orderBy: 'username' | fltUsersByFirm : filters.firm">
+        <tr ng-repeat="user in users | orderBy: 'username' | fltUsersByFirm : filters.firm | filter: {_id: filters.user._id || ''}">
             <td>{{$index}}</td>
             <td>{{user.username}}</td>
             <td><field-input object='user' field="contractor" options="options"></field-input></td>
