--- a/app/layout/admin.records.html
+++ b/app/layout/admin.records.html
@@ -25,12 +25,17 @@
     </tr>
     <tr ng-repeat="count in counts | orderBy : 'contractor' | fltRecByUser:filters.user | fltRecByFirm: filters.firm">
         <td>{{$index}}</td>
-        <td><field-date object="count" field="created" options="options"></field-date></td>
+        <td>
+            <span ng-if="!quarter.protected(count)"><field-date object="count" field="created" options="options"></field-date></span>
+            <span ng-if="quarter.protected(count)">{{count.created|date:'dd.MM.yyyy'}}</span>
+        </td>
         <td><field-input object="count" field="amount" options="options"></field-input></td>
         <td>{{count.contractor}}
             <a href="" ng-click="filters.user=getUser(count.createdBy)" ui-sref="main.admin.users"><mark style="color: #808080; font-size: 0.8em;">{{getUser(count.createdBy).username}}</mark></a>
         </td>
         <td>{{count.sysNumber}}</td>
-        <td><a href="" ng-click="remove(count)"><i class="fa fa-times"></i></a></td>
+        <td>
+            <span ng-if="!quarter.protected(count)"><a href="" ng-click="remove(count)"><i class="fa fa-times"></i></a></span>
+        </td>
     </tr>
 </table>
