--- a/app/layout/auth.login.html
+++ b/app/layout/auth.login.html
@@ -9,7 +9,7 @@
                 <input type="text" ng-model="username" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Email" required="" >
                 <input type="password" ng-model="password" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Password" required="" >
 
-                <p class="text-center text-danger"> имя пользователя или пароль не верны ... </p>
+                <p class="text-center text-danger" ng-show="error"> имя пользователя или пароль не верны ... </p>
                 <button class="btn btn-lg btn-primary btn-block" ng-click="login()" style="margin: 10px 0">
                     авторизоваться
                 </button>
