--- a/app/layout/admin.main.html
+++ b/app/layout/admin.main.html
@@ -8,6 +8,7 @@
             <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.firms">Фирмы</a></li>
             <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.records">Данные</a></li>
             <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.createToken">Пригласить пользователя</a></li>
+            <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.createRecord">Создать фактуру</a></li>
         </ul>
     </div>
 
