--- a/app/layout/admin.users.html
+++ b/app/layout/admin.users.html
@@ -1,28 +1,28 @@
 <!--suppress HtmlFormInputWithoutLabel -->
 <!--<div class="row" style="margin: 10px">-->
-    <!--<div class="col-md-3" >-->
-        <!--<div class="input-group">-->
-            <!--<span class="input-group-addon">поиск</span>-->
-            <!--<input type="text" class="form-control" id="inputGroupSuccess3" aria-describedby="inputGroupSuccess3Status">-->
-        <!--</div>-->
-    <!--</div>-->
+<!--<div class="col-md-3" >-->
+<!--<div class="input-group">-->
+<!--<span class="input-group-addon">поиск</span>-->
+<!--<input type="text" class="form-control" id="inputGroupSuccess3" aria-describedby="inputGroupSuccess3Status">-->
+<!--</div>-->
+<!--</div>-->
 
-    <!--<div class="col-md-3" ng-show="!creating">-->
-        <!--<button type="button" class="btn btn-default" ng-click="creating = true" > Добавить пользователя </button>-->
-    <!--</div>-->
+<!--<div class="col-md-3" ng-show="!creating">-->
+<!--<button type="button" class="btn btn-default" ng-click="creating = true" > Добавить пользователя </button>-->
+<!--</div>-->
 
-    <!--<div ng-show="creating">-->
-        <!--<div class="col-md-3">-->
-            <!--<input type="text" class="form-control" placeholder="login/e-mal" ng-model="username">-->
-        <!--</div>-->
-        <!--<div class="col-md-2">-->
-            <!--<input type="text" class="form-control" placeholder="password" ng-model="password">-->
-        <!--</div>-->
+<!--<div ng-show="creating">-->
+<!--<div class="col-md-3">-->
+<!--<input type="text" class="form-control" placeholder="login/e-mal" ng-model="username">-->
+<!--</div>-->
+<!--<div class="col-md-2">-->
+<!--<input type="text" class="form-control" placeholder="password" ng-model="password">-->
+<!--</div>-->
 
-        <!--<button type="button" class="btn btn-default dropdown-toggle" aria-expanded="false" ng-click="creating = false"> отмена </button>-->
-        <!--<button type="button" class="btn btn-default dropdown-toggle" aria-expanded="false" ng-click="createUser()"> сохранить </button>-->
+<!--<button type="button" class="btn btn-default dropdown-toggle" aria-expanded="false" ng-click="creating = false"> отмена </button>-->
+<!--<button type="button" class="btn btn-default dropdown-toggle" aria-expanded="false" ng-click="createUser()"> сохранить </button>-->
 
-    <!--</div>-->
+<!--</div>-->
 
 <!--</div>-->
 <div class="row">
@@ -55,19 +55,15 @@
             </td>
             <td><field-date object="user" options="options" field="created"></field-date></td>
             <td class="management">
-                <span>
-                    <a href="" title="Смотреть фирмы пользователя"
-                       ng-click="filters.user = user"
-                       ui-sref="main.admin.firms({userId: user._id})">
-                        <i class="fa fa-building-o"></i>
-                    </a>
-                <a href="" title="Смотреть данные пользователя"
-                   ng-click="filters.user = user"
-                   ui-sref="main.admin.records({userId: user._id})"><i class="fa fa-book"></i></a>
-                </span>
-                <span>
+                <a href="" title="Смотреть фирмы пользователя" ng-click="filters.user = user" ui-sref="main.admin.firms({userId: user._id})">
+                    <i class="fa fa-building-o"></i>
+                </a>
 
-                </span>
+                <a href="" title="Смотреть данные пользователя" ng-click="filters.user = user" ui-sref="main.admin.records({userId: user._id})">
+                    <i class="fa fa-book"></i>
+                </a>
+
+                <a href="" ng-click="changeUserPassword(user)" title="Сменить пароль для пользователя"><i class="fa fa-user-secret"></i></a>
 
 
             </td>
