--- a/app/layout/component.field-date.html
+++ b/app/layout/component.field-date.html
@@ -1,5 +1,5 @@
 <div class="input-group date" >
-    <span ng-click="editMode = true" >{{ value|date:'dd.MM.yyyy'}}</span>
+    <span ng-click="editMode = true" >{{ value|date:mask}}</span>
     <div id="sandbox-container" ng-show="editMode">
         <div ></div>
     </div>
