--- a/app/layout/user.counts.count.html
+++ b/app/layout/user.counts.count.html
@@ -25,7 +25,6 @@
 
                     <select class="form-control" ng-model = 'contractor'
                             ng-options="c as c for c in getContractors()"> выберите фирму
-                        <!--ng-options="firm as firm.name for firm in firms"> выберите фирму-->
                     </select>
 
                     <button type="button" class="btn btn-default" ng-click="create()">Создать <i class="fa-li fa fa-spinner fa-spin" style="position: inherit" ng-show="progress"></i></button>
@@ -34,8 +33,7 @@
             </div>
         </div>
 
-        <!--<div class="row">{{getContractors()}}</div>-->
-
+        <!-- блок управления отображением: с номером / без номера -->
         <div class="col-md-3">
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group" role="group" aria-label="First group">
@@ -43,11 +41,13 @@
                             ng-click="closed=true" ng-class="{active:closed}"
                             title="показать оферты с номером">
                         <i class="fa fa-lock"></i></button>
+                    <button class="btn btn-toolbar" ng-show="closed">
+                        <field-date object="filterDate" field="date" view-mode="1" mask="MMMM yyyy"></field-date>
+                    </button>
                     <button type="button" class="btn btn-default"
                             ng-click="closed=false" ng-class="{active:!closed}"
                             title="показать оферты без номера">
                         <i class="fa fa-unlock"></i></button>
-                    <!--<button type="button" class="btn btn-default">март 2015 {{closed}}</button>-->
                 </div>
 
             </div>
@@ -65,7 +65,7 @@
             <th style="min-width: 250px;">№ оферты</th>
             <th style="min-width: 250px;">Управление</th>
         </tr>
-        <tr ng-repeat="count in filtered() | filter: {firm: firm._id} | orderBy: 'sysNumber'">
+        <tr ng-repeat="count in counts | closed:closed | filter: {firm: firm._id} | month: filterDate.date: closed | orderBy: 'sysNumber'">
             <td>{{$index+1}}</td>
             <td>{{count.contractor}}</td>
             <td>
